[package]
name = "assert_unordered"
version = "0.3.4"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A direct replacement for `assert_eq` for unordered collections"
repository = "https://github.com/nu11ptr/assert_unordered"
documentation = "https://docs.rs/assert_unordered"
keywords = ["testing", "assert", "assertion", "diff"]
categories = ["development-tools::testing", "no-std", "rust-patterns"]
readme = "README.md"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
color = ["ansi_term", "std"]
default = ["color"]
std = []

[dependencies]
ansi_term = { version = "0.12", optional = true }
